Bug 73665 - SIGSEGV in weston_fade_run crashes Weston
Summary: SIGSEGV in weston_fade_run crashes Weston
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-15 15:22 UTC by U. Artie Eoff
Modified: 2014-01-21 21:54 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdb backtrace (8.51 KB, text/plain)
2014-01-15 15:22 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2014-01-15 15:22:02 UTC
Created attachment 92152 [details]
gdb backtrace

When Weston wakes up from idle, closing Weston while the unlock dialog is present triggers segmentation fault in weston_fade_run.  See backtrace for more details.

1. weston --backend=x11-backend.so -i5
2. Allow weston to enter idle
3. Move mouse to wake weston and display the unlock dialog
4. Close the weston [X] window
5. Observe segmentation fault

wayland (master) heads/master-0-gc102c20
drm (master) libdrm-2.4.50-0-g4c5de72
mesa (10.0) heads/10.0-0-g3a62718
libva (master) libva-1.2.1-0-g88ed1eb
intel-driver (master) 1.2.1-0-g8f306e3
weston (master) heads/master-0-gc180977
Comment 1 Kristian Høgsberg 2014-01-20 05:48:42 UTC
commit 87d3b61355cf742f8ac1270c3f4e38ded9501de7
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Sun Jan 19 21:48:10 2014 -0800

    shell: Don't start a fade animation if we don't have an output
    
    When the last window of the X11 compositor is closed during a fade or
    while locked, we'll try to start a fade back to the lock screen.  However,
    if we closed the last window, there are no outputs left and the animation
    will try to run with surface->output == NULL.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=73665


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.